# rust-pi-demo

./: Cargo.toml  deploy
.cargo/: config.toml
documentation/: Compile Rust for Raspberry Pi ARM | by Tiziano Santoro | The Startup | Medium.html
src/: main.rs
