[package]
name = "pi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# actix-web = "3.1.0"
# actix-cors = "0.5.4"
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "0.2", features = ["full"] }   # Downgrade Tokio
# rppal = "0.12.0"


[dependencies]
actix-web = "4"
actix-cors = "0.6"                                 # Make sure to use a compatible version with Actix Web 4
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rppal = "0.17.1"
